--- a/.config/regolith/i3/config
+++ b/.config/regolith/i3/config
@@ -541,7 +541,8 @@ bindsym $mod+Ctrl+less move workspace to output left
 workspace_auto_back_and_forth yes
 
 # start a file manager
-bindsym $mod+x exec /usr/bin/nautilus
+# bindsym $mod+x exec /usr/bin/nautilus
+bindsym $mod+x exec /usr/bin/x-terminal-emulator -e ranger
 
 # start todoist
 bindsym $mod+v exec /usr/bin/sensible-browser todoist.com
