--- a/.config/regolith/i3/config
+++ b/.config/regolith/i3/config
@@ -541,14 +541,14 @@ bindsym $mod+Ctrl+less move workspace to output left
 workspace_auto_back_and_forth yes
 
 # start a file manager
-# bindsym $mod+x exec /usr/bin/nautilus
-bindsym $mod+x exec /usr/bin/x-terminal-emulator -e ranger
+bindsym $mod+x exec /usr/bin/nautilus
+#bindsym $mod+x exec /usr/bin/x-terminal-emulator -e ranger
 
 # start todoist
 bindsym $mod+v exec /usr/bin/sensible-browser todoist.com
 
 # start mailspring
-bindsym $mod+m exec /usr/bin/mailspring
+#bindsym $mod+m exec /usr/bin/mailspring
 
 # start zotero
 bindsym $mod+z exec zotero
