--- a/.config/regolith/i3/config
+++ b/.config/regolith/i3/config
@@ -544,8 +544,8 @@ workspace_auto_back_and_forth yes
 bindsym $mod+x exec /usr/bin/nautilus
 #bindsym $mod+x exec /usr/bin/x-terminal-emulator -e ranger
 
-# start todoist
-bindsym $mod+v exec /usr/bin/sensible-browser todoist.com
+# start nirvana
+bindsym $mod+v exec /usr/bin/sensible-browser focus.nirvanahq.com
 
 # start mailspring
 #bindsym $mod+m exec /usr/bin/mailspring
